--- a/kern/nl/genl/Makefile
+++ b/kern/nl/genl/Makefile
@@ -4,11 +4,15 @@ KERNEL_DIR = /lib/modules/$(KERNEL_VER)/build
 
 PWD = $(shell pwd)
 
-MODULE = genl_drv
+ccflags-y += -I$(src)/../include
+
+MODULE = my_genl
 obj-m := $(MODULE).o
 
+
+
 all:
-	make -C $(KERNEL_DIR) M=$(PWD) modules
+	make -C $(KERNEL_DIR) M=$(PWD)  modules  
 
 .PHONY:clean
 clean:
