--- a/kern/nl/sample/Makefile
+++ b/kern/nl/sample/Makefile
@@ -5,10 +5,10 @@ SAMPLE = nl_echo genl_echo
 
 all:$(SAMPLE)
 
-nl_echo:
+nl_echo: nl_echo.c
 	$(CC) $(CFLAGS) nl_echo.c -o nl_echo
 
-genl_echo:
+genl_echo: genl_echo.c
 	$(CC) $(CFLAGS) genl_echo.c -o genl_echo
 
 .PHONY:clean
