tftp: add tftp server code

--- a/net/tftp/Makefile
+++ b/net/tftp/Makefile
@@ -6,8 +6,8 @@ SAMPLE = tftp_server tftp_client
 
 all:$(SAMPLE)
 
-tftp_server: tftp_server.c
-	$(CC) $(CFLAGS) $< -o $@
+tftp_server: tftp_server.c tftp.c
+	$(CC) $(CFLAGS) tftp_server.c tftp.c -o $@ -lpthread
 
 tftp_client: tftp_client.c
 	$(CC) $(CFLAGS) $< -o $@
