mm_sample: update Makefile to support complie x64 and arm64

--- a/kern/mem/mm_sample/Makefile
+++ b/kern/mem/mm_sample/Makefile
@@ -1,9 +1,15 @@
-export ARCH=arm64
-export CROSS_COMPILE=aarch64-linux-gnu-
+SOC_MODE ?= 0
 
-#KERNEL_VER = $(shell uname -r)
-#KERNEL_DIR = /lib/modules/$(KERNEL_VER)/build
-KERNEL_DIR = ~/code/linux-4.0.1/
+ifeq ($(SOC_MODE), 1)
+	KERNEL_DIR = ~/code/linux-4.0.1/
+else
+	KERNEL_VER = $(shell uname -r)
+	KERNEL_DIR = /lib/modules/$(KERNEL_VER)/build
+endif
+#export ARCH=arm64
+#export CROSS_COMPILE=aarch64-linux-gnu-
+
+
 
 PWD = $(shell pwd)
 
@@ -11,8 +17,16 @@ MODULE = mm_sample
 obj-m := $(MODULE).o
 
 all:
-	make -C $(KERNEL_DIR) M=$(PWD)  modules  
+ifeq ($(SOC_MODE), 1)
+	make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- -C  $(KERNEL_DIR) M=$(PWD) modules
+else
+	make -C $(KERNEL_DIR) M=$(PWD)  modules
+endif
 
 .PHONY:clean
 clean:
-	make -C $(KERNEL_DIR) M=$(PWD) clean 
+ifeq ($(SOC_MODE), 1)
+	make ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- -C  $(KERNEL_DIR) M=$(PWD) modules clean
+else
+	make -C $(KERNEL_DIR) M=$(PWD)  modules clean
+endif
